dimagi-SalesforceFB/src/objects/Contract_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Email</field>
                <operation>contains</operation>
                <value>@dimagi.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Contacts</relationshipLabel>
        <relationshipName>Contract_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>Contract Contacts</relationshipLabel>
        <relationshipName>Contract_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backstop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contract Contact</label>
    <nameField>
        <displayFormat>OC-{000000}</displayFormat>
        <label>Contract Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>